# snagem

./: .bandit.yml  .dockerignore  .editorconfig  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  poetry.toml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: lint.yaml  lint.yml
docs/: openapi.yaml
snag/: __init__.py  main.py  snag.py
snagctl/: main.py
snagd/: README.md  __init__.py  config.py  main.py  snag.py  worker.py  ytdl.py
snagd/alembic/: env.py
snagd/api/: __init__.py
snagd/api/v1/: __init__.py  media.py
snagd/api/v1/endpoints/: __init__.py  media.py  sources.py
snagd/api/v2/: __init__.py  media.py
snagd/config/: __init__.py
snagd/db/: __init__.py  crud.py  env.py  model.py  models.py  schemas.py  session.py
snagd/db/alembic/: README.md  env.py  script.py.mako
snagd/db/alembic/versions/: 8cc1e0b83c3b_init.py
snagd/db/crud/: __init__.py  base.py  media.py
snagd/db/model/: __init__.py  media.py  setting.py
snagd/db/schema/: __init__.py  base.py  media.py
snagd/task/: __init__.py  media.py  session.py  worker.py
snagd/tasks/: __init__.py
snagd/util/: __init__.py
snagd/utils/: __init__.py  log.py
snagem/: __init__.py  __main__.py  logger.py  settings.py
snagem/db/: __init__.py  session.py
snagem/db/alembic/: env.py  script.py.mako
snagem/db/alembic/versions/: 1627ae0a98d2.py
snagem/db/crud/: __init__.py  base.py  media.py
snagem/db/model/: __init__.py  media.py  setting.py
snagem/db/schema/: base.py  media.py
snagem/route/: __init__.py  router.py
snagem/route/v1/: __init__.py  health.py  media.py  router.py
snagem/task/: __init__.py  health.py  media.py  session.py
snagemd/: api.py  api.v1.yml  snagemd.py  ytdl.py
test/: conftest.py  ruff.toml  test_logger.py  test_route_v1_health.py  test_route_v1_media.py
