# SPDX-License-Identifier: AGPL-3.0-or-later

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.8"]

[tool.poetry]
authors = ["Johnathan C. Maudlin <jcmdln@gmail.com>"]
description = ""
license = "AGPL-3.0-or-later"
name = "snagem"
packages = [{ include = "snag" }, { include = "snagd" }]
readme = "README.md"
repository = "https://github.com/jcmdln/snagem"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"
# snagem dependencies
alembic = "^1.7.7"
celery = { version = "^5.2.7", extras = ["redis"] }
click = "^8.1.3"
cryptography = "^37.0.1"
datetime = "^4.4"
fastapi = { version = "^0.78.0", extras = ["all"] }
filelock = "^3.7.0"
humanfriendly = "^10.0"
psycopg = { version = "^3.0.14", extras = ["c"] }
pymysql = "^1.0.2"
sqlalchemy = { git = "https://github.com/sqlalchemy/sqlalchemy", rev = "4fb6aca" }
youtube_dl = "*"

[tool.poetry.dev-dependencies]
docker-compose = "^1.29.2"

[tool.poetry.group.bandit.dependencies]
bandit = "^1.7.4"
toml = "*"

[tool.poetry.group.coverage.dependencies]
coverage = "^6.3.2"

[tool.poetry.group.flake8.dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-black = "^0.3.2"
flake8-docstrings = "^1.6.0"
flake8-isort = "^4.1.1"
isort = "^5.10.1"
mccabe = "*"
pycodestyle = "*"
pydocstyle = "*"
pyflakes = "*"

[tool.poetry.group.lsp.dependencies]
pyls-flake8 = "^0.4.0"
pyls-isort = "^0.2.2"
pylsp-mypy = "^0.5.8"
pylsp-rope = "^0.1.9"
python-lsp-black = "^1.2.1"
python-lsp-server = { version = "^1.4.1", extras = [
    "mccabe",
    "pycodestyle",
    "pydocstyle",
    "pyflakes",
    "rope",
] }

[tool.poetry.group.pytest.dependencies]
pytest = "^7.1.2"

[tool.poetry.group.mypy.dependencies]
mypy = ">=0.960"
# Plugins
sqlalchemy = { git = "https://github.com/sqlalchemy/sqlalchemy", rev = "4fb6aca" }
# Type stubs
types-click = "^7.1.8"
types-cryptography = "^3.3.21"
types-humanfriendly = "^9.2.8"
types-itsdangerous = "^1.1.6"
types-jinja2 = "^2.11.9"
types-orjson = "^3.6.2"
types-pymysql = "^1.0.19"
types-python-dateutil = "^2.8.17"
types-pyyaml = "^6.0.7"
types-redis = "^4.2.0"
types-requests = "^2.27.29"
types-ujson = "^5.2.0"

[tool.poetry.group.tox.dependencies]
tox = "^3.25.0"

[tool.poetry.scripts]
snag = "snag.main:main"
snagd = "snagd.main:main"

#
# Tools
#

[tool.bandit]
ignore = []

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
lines_between_types = 1
profile = "black"
remove_redundant_aliases = true
wrap_length = 99

[tool.mypy]
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
show_error_context = true
strict = true
strict_optional = true
# Disable specific '--strict' and '--strict_optional' checks
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
