[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.4.0"]

[tool.poetry]
authors = ["Johnathan C. Maudlin <jcmdln@gmail.com>"]
description = ""
license = "AGPL-3.0-or-later"
name = "snagem"
readme = "README.md"
repository = "https://github.com/jcmdln/snagem"
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.10.0"

click = "~8.1.0"
python-dateutil = "~2.8.0"
yt-dlp = "^2023"

fastapi = "~0.92.0"
pydantic = "~1.10.0"

alembic = "~1.9.0"
psycopg = { version = "~3.1.0", extras = ["c"] }
sqlalchemy = "~2.0.0"

celery = "~5.3.0b1"
redis = { version = "~4.5.0", extras = ["hiredis"] }

uvicorn = "~0.20.0"
uvloop = "~0.17.0"

[tool.poetry.group.mypy.dependencies]
mypy = "~1.0.0"
# Plugins
sqlalchemy = "*"
# Type stubs
celery-types = "*"
types-click = "*"

[tool.poetry.group.pip-audit]
optional = true
[tool.poetry.group.pip-audit.dependencies]
pip-audit = "~2.4.0"

[tool.poetry.group.pytest.dependencies]
coverage = "~6.5.0"
httpx = "~0.23.0"
pytest = "~7.2.0"
pytest-cov = "~4.0.0"

[tool.poetry.group.ruff.dependencies]
black = "^23"
ruff = ">=0.0.249"

[tool.poetry.group.tox.dependencies]
tox = "~4.4.0"

[tool.poetry.scripts]
snagem = "snagem.__main__:cli"

#
# Tools
#

[tool.black]
line-length = 100

[tool.coverage.run]
omit = ["snagem/__main__.py", "snagem/db/alembic/*"]
source = ["snagem/"]

[tool.mypy]
exclude = [".git/", ".tox/", ".venv/"]
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
show_error_context = true
strict = true
strict_optional = true
# Disable specific "--strict" and "--strict_optional" checks
disallow_any_generics = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_decorators = false

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
filterwarnings = ["ignore", "default:::snagem"]
testpaths = ["tests/"]

[tool.ruff]
ignore = [
    "D",      # Ignore all documentation lints
    "ANN101", # Missing type annotation for `self` in method
    "COM812", # Trailing comma missing
    "TCH001", # Move application import into a type-checking block
    "TCH002", # Move 3rd-party import into a type-checking block
]
line-length = 100
select = ["ALL"]
